experimental/ir/testdata/editions/inheritance.proto.stderr.txt
error: `legacy_closed_enum` is not supported in Edition 2023
  --> testdata/editions/inheritance.proto:22:8
   |
15 | edition = "2023";
   |           ------ edition specified here
...
21 | option features.field_presence = IMPLICIT;
22 | option features.(pb.cpp).legacy_closed_enum = false;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: deprecated since Edition 2023, removed in "<unknown>"
   = help: deprecated: The legacy closed enum behavior in C++ is deprecated and
           is scheduled to be removed in edition 2025. See
           http://protobuf.dev/programming-guides/enum/#cpp for more information

warning: required fields are deprecated
  --> testdata/editions/inheritance.proto:26:44
   |
26 |     int32 y = 2 [features.field_presence = LEGACY_REQUIRED];
   |                                            ^^^^^^^^^^^^^^^
   = help: do not attempt to change this to `EXPLICIT` if the field is already
           in-use; doing so is a wire protocol break

encountered 1 error and 1 warning
